--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Brownlows Bets"
-author: "Your Name"
-date: "Year 2020"
+author: "Bessie Luevano"
+date: "Summer 2021"
 output: 
   html_document:
     number_sections: true
@@ -34,6 +34,13 @@ There are 3 questions and there should be at least 3 separate commits, at least 
 
 
 <!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 637 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
+
+```{r}
+bdays <-1:365
+class <- sample(bdays, size = 35)
+sort(class)
+```
+
 
 
 # What size of class makes the 2:1 bet fair?  
