--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -37,10 +37,17 @@ There are 3 questions and there should be at least 3 separate commits, at least 
 
 ```{r}
 bdays <-1:365
-class <- sample(bdays, size = 35)
+class <- sample(bdays, size = 35, replace = TRUE, prob = NULL)
 sort(class)
+betwin <- unique(class)
 ```
 
+```{r}
+brownlowbucks = 0 
+length(class)
+length(betwin)
+brownlowbucks <- if(length(class) - length(betwin) >0) brownlowbucks = brownlowbucks+1 else brownlowbucks = brownlowbucks-2
+```
 
 
 # What size of class makes the 2:1 bet fair?  
