--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -40,13 +40,19 @@ bdays <-1:365
 class <- sample(bdays, size = 35, replace = TRUE, prob = NULL)
 sort(class)
 betwin <- unique(class)
+brownlowbucks = 0 
+nCLASS = 1000
 ```
 
 ```{r}
-brownlowbucks = 0 
+for (i in 1:nCLASS){
+class <- sample(bdays, size = 35, replace = TRUE, prob = NULL)
 length(class)
+betwin = unique(class)
 length(betwin)
 brownlowbucks <- if(length(class) - length(betwin) >0) brownlowbucks = brownlowbucks+1 else brownlowbucks = brownlowbucks-2
+}
+brownlowbucks
 ```
 
 
