--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -11,8 +11,9 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 require(tidyverse)
-require(tidyverse)
+require(tigerstats)
 require(knitr)
+source(file="BrLw.R")
 ```
 
 
@@ -36,29 +37,93 @@ There are 3 questions and there should be at least 3 separate commits, at least 
 <!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 637 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
 
 ```{r}
-bdays <-1:365
-class <- sample(bdays, size = 35, replace = TRUE, prob = NULL)
-sort(class)
-betwin <- unique(class)
-brownlowbucks = 0 
-nCLASS = 1000
+BrLw(35,4.35,637)
+```
+
+
+```{r}
+bank=numeric()
+for(j in 1:500){
+  
+bank[j] = BrLw(35,4.35,637)}
 ```
 
 ```{r}
-for (i in 1:nCLASS){
-class <- sample(bdays, size = 35, replace = TRUE, prob = NULL)
-length(class)
-betwin = unique(class)
-length(betwin)
-brownlowbucks <- if(length(class) - length(betwin) >0) brownlowbucks = brownlowbucks+1 else brownlowbucks = brownlowbucks-2
-}
-brownlowbucks
+hist(bank)
+favstats(bank)
+sorted<-sort(bank)
+print(sorted[12])
+print(sorted[488])
 ```
 
 
 # What size of class makes the 2:1 bet fair?  
 <!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting profits!-->
 
+## ok try 29
+
+```{r}
+BrLw(29,2,637)
+```
+
+```{r}
+bank=numeric()
+for(j in 1:500){
+  
+bank[j] = BrLw(29,2,637)}
+```
+
+```{r}
+hist(bank)
+favstats(bank)
+sorted<-sort(bank)
+print(sorted[12])
+print(sorted[488])
+```
+
+## ok try 28
+
+```{r}
+BrLw(28,2,637)
+```
+
+```{r}
+bank=numeric()
+for(j in 1:500){
+  
+bank[j] = BrLw(28,2,637)}
+```
+
+```{r}
+hist(bank)
+favstats(bank)
+sorted<-sort(bank)
+print(sorted[12])
+print(sorted[488])
+```
+
+## ok try 27
+
+```{r}
+BrLw(27,2,637)
+```
+
+```{r}
+bank=numeric()
+for(j in 1:500){
+  
+bank[j] = BrLw(27,2,637)}
+```
+
+```{r}
+hist(bank)
+favstats(bank)
+sorted<-sort(bank)
+print(sorted[12])
+print(sorted[488])
+```
+
+It appears that the earnings and lost fluctuates. Although, with the class size 27, Brownlow appears to lose more offten than win. 
 
 # In the class and payoff as described what is a 95% confidence interval for Brownlow's earnings?
   
