--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -134,8 +134,10 @@ It appears that the earnings and lost fluctuates. Although, with the class size 
   
 <!--Explain and display your method of coming up with a 95% confidence interval of  professor Brownlows winnings (or losings)-->
 
+We would have to continue playing with the class size and in order to reach a 95% confidence interval. 
 
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If professor Brownlow is consistantly making or losing money how could he change his payout so that his profits center on zero?  Also discuss what size his class should be in order to have his current scheme balance at zero profit.!-->
 
+Brownlow was to bet $4.35 with 27 students in the class in order for his profits to center at 0. 
